Fix layout bug - 3

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -9,16 +9,17 @@ html {
 }
 
 *,
-*::before,
-*::after {
-  padding: 0;
+*:after,
+*:before {
   margin: 0;
+  padding: 0;
   box-sizing: inherit;
+  text-decoration: none;
 }
 
 body {
-  padding: 0;
-  margin: 0;
+  font-size: 100%;
+  list-style-type: none;
   width: 100%;
   min-height: 100vh;
   overflow-x: hidden;
