--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -24,8 +24,8 @@
     display: block;
     position: fixed;
     z-index: 999;
-    bottom: 0.5rem;
-    right: 0.5rem;
+    bottom: 1rem;
+    right: 1rem;
     width: 2.5rem;
     height: 2.5rem;
     text-align: center;
@@ -182,7 +182,7 @@
     display: block;
     height: inherit;
     overflow: auto;
-    padding: 2rem 2rem 5rem 2rem;
+    padding: 2rem 2rem 8rem 2rem;
   }
 
   .aside__user-info {
@@ -194,7 +194,7 @@
     width: 100%;
     background-color: var(--main-color);
     color: var(--white-color);
-    gap: 2.5rem;
+    gap: 3rem;
   }
   .user-info__name {
     font-size: 1.2rem;
